--- a/src/style/pages/about-us.scss
+++ b/src/style/pages/about-us.scss
@@ -1,5 +1,7 @@
 .about-us{
   &--page{
+    width: 80%;
+    margin: auto;
     background-color: white;
     padding: 2rem;
     border-radius: 50px;
