--- a/views/contact.njk
+++ b/views/contact.njk
@@ -7,7 +7,7 @@ eleventyNavigation:
 ---
 <main class="contact">
     <h1 class="title">{{ title }}</h1>
-    <div class="contact--page wrapper">
+    <div class="contact--page">
         <h2>need support? contact us personaly!</h2>
         <div class="contact--page--block">
             <div class="contact--page--block--info" >
