--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -1,5 +1,6 @@
 
 .footer {
+    margin-bottom: 2rem;
     &--wrapper{
         display: flex;
         justify-content: space-around;
@@ -10,7 +11,7 @@
                 display: flex;
             }
             >img{
-                width: 12rem;
+                width: 13rem;
                 margin: 0 auto 0 0;
             }
         }
