--- a/src/style/pages/_contact.scss
+++ b/src/style/pages/_contact.scss
@@ -3,18 +3,19 @@
   padding: 2rem;
   border-radius: 50px;
   box-sizing: border-box;
+  width: 80%;
+  margin: auto;
   &--page{
 
     &--block{
       @media (min-width: 875px) {
         display: flex;
       }
-      height: 25rem;
+      height: 16rem;
       &--info{
         display: flex;
     align-items: center;
       width: 50%;
-      height: 50%;
       background-color: $orange;
       ul{
         display: flex;
@@ -25,21 +26,21 @@
         li{
           list-style: none;
           a{
-            color: black;
+            color: white;
+            font-size: 1.2rem;
           }
         }
       }
       }
       &--fields{
       width: 50%;
-      height: 50%;
       box-sizing: border-box;
       border: 4px solid $orange;
       form{
         height: 100%;
         section{
           input{
-          border: 2px solid $orange;
+          border: 4px solid $orange;
           }
         }
       }
