--- a/src/style/pages/_news.scss
+++ b/src/style/pages/_news.scss
@@ -1,17 +1,18 @@
 .news{ 
+
   ul{
     display: flex;
     flex-wrap: wrap;
     padding-inline-start: 0;
+    justify-content: space-between;
   }
   background-color: white;
 
   border-radius: 50px;
   box-sizing: border-box;
   &--list{
-    box-sizing: border-box;
     list-style: none;
-    width: 45%;
+    width: 49%;
     margin: auto;
     &--content{
       height: fit-content;
@@ -31,7 +32,9 @@
 .more{
 
   &--news{
-    margin-bottom: 15rem;
+    width: 80%;
+    margin: auto;
+    margin-bottom: 10rem;
     h2{
 
     }
@@ -69,44 +72,14 @@
     }
   }
 }
-table{
-  thead{
-display: none;
-    tr{
 
-      th{
-        
-      }
-    }
-  }
-  tbody{
-    tr{
-      display: flex;
-      justify-content: space-around;
-      td{
-        &:hover{
-          width: 31%;
-          transition: 0.2s;
-          cursor: pointer;
-          box-sizing: border-box;
-        }
-        width: 30%;
-        img{
-      width: 100%;
-        }
-      }
-    }
-    
-  }
-}
 .post{
-  background: white;
-  border: 4px solid gray;
+  background-color: white;
+  padding: 2rem;
   border-radius: 50px;
+  box-sizing: border-box;
   width: 80%;
-  margin-top: 10rem;
-  padding: 1rem 1rem;
-  max-width: 110rem;
+  margin: auto;
    .iframe{
      padding: 1rem;
      background: white;
@@ -119,5 +92,14 @@ display: none;
     border-radius: 50px;
     max-width: 100%;
   }
+  }
+  .MD{
+    &--images{
+      display: flex;
+      justify-content: space-evenly;
+      img{
+        width: 33%;
+      }
+    }
   }
 }
