--- a/views/about-us.njk
+++ b/views/about-us.njk
@@ -6,7 +6,7 @@ eleventyNavigation:
     order: 3
 ---
 
-<div class="about-us--page wrapper">
+<div class="about-us--page">
 <h1 class="title">Over ons!</h1>
 
     <h2>Who is Go-Hike?</h2>
