--- a/views/features/socials.njk
+++ b/views/features/socials.njk
@@ -1,6 +1,7 @@
 ---
 layout: features
 tags: features
+root: ../
 title: Socials
 desc: Make new friends who also like to hike, add them and chat with them!
 ---
