--- a/views/features/stats.njk
+++ b/views/features/stats.njk
@@ -2,6 +2,7 @@
 layout: features
 tags: features
 title: Stats
+root: ../
 desc: Follow your statistics and see how you progress!
 ---
 <div class="Stats" id="Stats">
