--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -4,7 +4,7 @@
     &--wrapper{
         display: flex;
         justify-content: space-around;
-        background-color: gray;
+        background-color: white;
         >div{
             @media (min-width: 875px) {
                 
