--- a/views/_includes/_components/featuresComp.njk
+++ b/views/_includes/_components/featuresComp.njk
@@ -6,7 +6,7 @@
         <article class="features--article wrapper">
             <div class="features--img">
                 {% for img in feature.images %}
-                <img src={{ img }} alt="...">
+                <img src="{{root}}/{{ img }}" alt="...">
                 {% endfor %}
             </div>
             <hr>
