--- a/views/_includes/_components/header.njk
+++ b/views/_includes/_components/header.njk
@@ -3,7 +3,7 @@
 <header>
   <div class="header wrapper">
   <figure class="logo wrapper">
-    <img src="../../assets/img/logo.png" alt="">
+    <img src="{{root}}assets/img/logo.png" alt="">
   </figure>
         <nav class="navbar wrapper">
             <ul class="navbar--list">
