--- a/views/_includes/_components/header.njk
+++ b/views/_includes/_components/header.njk
@@ -24,6 +24,6 @@
         </nav>
     </div>
         <a class="hero-image--horizontal">
-            <img src="../../../assets/img/banner.jpg" alt="...">
+            <img src="{{root}}assets/img/banner.jpg" alt="...">
         </a>
 </header>
